--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<artifactId>padogrid-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>padogrid-parent</name>
-	<version>0.9.18-REDIS</version>
+	<version>0.9.18-SNAPSHOT</version>
 	<description>padogrid data grid management addons and tools</description>
 
 	<properties>
