--- a/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
+++ b/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
@@ -1,6 +1,6 @@
 #
 # Copyright (c) 2023 Netcrest Technologies, LLC. All rights reserved.
-# 
+#
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -65,7 +65,7 @@ persistence:
     - key: path
       value: null
 
-# Cluster definitions. HaMqttClient supports multiple clusters.      
+# Cluster definitions. HaMqttClient supports multiple clusters.
 clusters:
     # Unique cluster name. Each cluster name defined in this file must be unique.
     # Default: cluster-default
@@ -75,6 +75,20 @@ clusters:
     # Default: true
     enabled: true
     
+    # true to auto connect as part of cluster service initialization,
+    # false to connect when HaMqttClient.connect() is invoked.
+    # Default: true
+    autoConnect: true
+    
+    # Initial number of endpoints to connect. If intialEndpointCount is set,
+    # then the cluster service first makes connections up to that number of
+    # endpoints and defers the rest of the endpoints to the next probing cycycle.
+    # This can significantly reduce the time to complete HaMqttClient.connect()
+    # call if there are a large number of endpoints. Less than 0 is equivalent to
+    # all endpoints.
+    # Default: -1
+    initialEndpointCount: -1
+        
     # Optional pulisherType. Valid values are STICKY, RANDOM, ROUND_ROBIN.
     # If STICKY and primaryServerURI is defined, the cluster client always uses
     # that server for all operations.
@@ -86,7 +100,7 @@ clusters:
     # For other publisherType values, it has no effect. The primary server
     # is automatically added to connection.serverURIs if not included.
     primaryServerURI: null
-    
+
     # MqttClientConnectionOptions attributes. Each attribute defined in this
     # file represents the corresponding attribute in MqttConnectionOptions.
     # Please see MqttConnectionOptions for details.
@@ -111,9 +125,10 @@ clusters:
       
       # serverURIs defines a list of brokers that make up the cluster. URI ranges
       # are supported for the last IP address octet and the port numbers. If the port
-      # number is not specified then default to 1883 for tcp and 8883 for ssl.
+      # number is not specified then defaults to 1883 for tcp, 8883 for ssl,
+      # 8083 for ws, and 8443 for wss.
       #
-      #   tcp|ssl://<host-name>[:<port-range>]
+      #   tcp|ssl|ws|wss://<host-name>[:<port-range>]
       #     tcp://mqtt.org:1883-1885
       #     tcp://mqtt.org:1883
       #     tcp://mqtt.org
