--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
@@ -1,3 +1,19 @@
+#
+# Copyright (c) 2023 Netcrest Technologies, LLC. All rights reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
 # true to enable the cluster service, false to disable.
 # Default: true
 enabled: true
@@ -48,8 +64,8 @@ persistence:
   properties:
     - key: path
       value: ${persistence.dir}
-      
-# Cluster definitions. HaMqttClient supports multiple clusters.       
+
+# Cluster definitions. HaMqttClient supports multiple clusters.
 clusters:
     # Unique cluster name. Each cluster name defined in this file must be unique.
     # Default: cluster-default
@@ -74,7 +90,7 @@ clusters:
     initialEndpointCount: -1
         
     # Optional pulisherType. Valid values are STICKY, RANDOM, ROUND_ROBIN.
-    # If STICKY and primaryServerURI is defined, the cluter client always uses
+    # If STICKY and primaryServerURI is defined, the cluster client always uses
     # that server for all operations.
     # Default: STICKY
     publisherType: ROUND_ROBIN
