--- a/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
+++ b/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
@@ -118,7 +118,7 @@ clusters:
     
     # Initial number of endpoints to connect. If intialEndpointCount is set,
     # then the cluster service first makes connections up to that number of
-    # endpoints and defers the rest of the endpoints to the next probing cycycle.
+    # endpoints and defers the rest of the endpoints to the next probing cycle.
     # This can significantly reduce the time to complete HaMqttClient.connect()
     # call if there are a large number of endpoints. Less than 0 is equivalent to
     # all endpoints.
