Renamed mqtt commands

--- a/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
+++ b/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
@@ -39,11 +39,11 @@ persistence:
   #
   #   MemoryPersistence, MqttDefaultFilePersistence
   #
+  # MemoryPersistence does not take properties. All properties are ignored.
+  #
   # MqttDefaultFilePersistence takes the 'path' property for the directory path
   # where the persistence data is to be stored. If the 'path' property is not
   # defined the working directory is used. All other properties are ignored.
-  #
-  # MemoryPersistence does not take properties. All properties are ignored.
   #
   # A custom persistence class must implement MqttClientPersistence and include
   # a constuctor with a single argument with the Properties type if the properties
@@ -55,15 +55,15 @@ persistence:
   # All cluster clients use the top-level 'persistence' element unless they have
   # their own 'persistence' element defined.
   #
+  # Example: Persist in 'persist' directory.
+  # className: MqttDefaultFilePersistence
+  # properties:
+  #  - key: path
+  #    value: persist
+  #
   # Default:
-  #   className: MqttDefaultFilePersistence
-  #   properties:
-  #     - key: path
-  #       value: persist
-  className: MqttDefaultFilePersistence
-  properties:
-    - key: path
-      value: null
+  #   className: MemoryPersistence
+  className: MemoryPersistence
 
 # Cluster definitions. HaMqttClient supports multiple clusters.
 clusters:
