--- a/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
+++ b/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
@@ -86,8 +86,8 @@ clusters:
     # Default: 5000
     timeToWait: 5000
     
-    # Failover Service (FoS). Valid values are -1, 0, 1, 2. Similar to QoS,
-    # HaMqttClient provides a subscriber failover service in four (4) levels.
+    # Failover Service (FoS). Valid values are 0, 1, 2, 3. HaMqttClient provides
+    # a subscriber failover service in four (4) levels.
     #
     # 0 - all subscribers, all connections. This level is default. It makes
     #     subscriptions and connections to all endpoints.
@@ -99,7 +99,7 @@ clusters:
     #     time. Failover is quick but there is a subscription delay which could
     #     lead to data loss.
     #
-    # 2 - two subscribers, two connections. Like FoS 0, this level opens two (2)
+    # 2 - two subscribers, two connections. Like FoS 1, this level opens two (2)
     #     connections but increases the number of endpoints that make subscriptions
     #     to two (2). That means, with FoS 2, HaMqttClient receives duplicate messages,
     #     one from each endpoint. HaMqttClient sticks to one of the endpoints and
@@ -107,8 +107,8 @@ clusters:
     #     the data from the other endpoint. The other endpoint replaces the sticky
     #     endpoint upon failure. Failover is immediate with no data loss.
     #
-    # 3 - select subscribers, select connections. FoS 2 allows configuration of both
-    #     subscriberCount and liveEndpointCount. By default, FoS 2 makes subscriptions
+    # 3 - select subscribers, select connections. FoS 3 allows configuration of both
+    #     subscriberCount and liveEndpointCount. By default, FoS 3 makes subscriptions
     #     to all of the endpoints. This is rather expensive and wasteful if there are
     #     many endpoints. The higher the numbers the higher the HA at the expense of
     #     higher volume of duplicate data and higher network traffic.
@@ -120,13 +120,13 @@ clusters:
     # then the cluster service first makes connections up to that number of
     # endpoints and defers the rest of the endpoints to the next probing cycle.
     # This can significantly reduce the time to complete HaMqttClient.connect()
-    # call if there are a large number of endpoints. Less than 0 is equivalent to
-    # all endpoints.
+    # call if there are a large number of endpoints. A negative value is equivalent
+    # to all endpoints.
     # Default: -1
     initialEndpointCount: -1
     
     # Number of live endpoints to maintain. -1 for all endpoints. This parameter is
-    # configurable only for FoS 2. For other FoS levels, it is hard wired as follows.
+    # configurable only for FoS 3. For other FoS levels, it is hard wired as follows.
     #    FoS 0: -1
     #    FoS 1: 2
     #    FoS 2: 2 
@@ -134,16 +134,20 @@ clusters:
     liveEndpointCount: -1
     
     # Maximum number of subscribers. -1 for all endpoints. This parameter is
-    # configurable only for FoS 2. For other FoS levels, it is hard wired as follows.
+    # configurable only for FoS 3. For other FoS levels, it is hard wired as follows.
     #    FoS 0: -1
     #    FoS 1: 1
     #    FoS 2: 2 
     # Default: -1
     subscriberCount: -1
     
-    # Publisher Type. Valid values are STICKY, RANDOM, ROUND_ROBIN.
+    # Publisher Type. Valid values are STICKY, RANDOM, ROUND_ROBIN, ALL.
+    #   STICKY - Use one server for all publications.
+    #   RANDOM - Randomly select one server from the live list for each publication.
+    #   ROUND_ROBIN - Select the next server from the live list for each publication.
+    #   ALL - Publish each message to all servers in the live list.
     # If STICKY and primaryServerURI is defined, the cluster client always uses
-    # that server for all operations. For FoS 0, publisherType is always STICKY.
+    # that server for all operations.
     # Default: STICKY
     publisherType: STICKY
     
